<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_316a042e6e73c757654fd1662a9f139"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:layout_marginBottom="525dp"
        android:text="@string/sign_up"
        android:textColor="#D8CFD3CF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="Name"
        android:backgroundTint="@color/white"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#F8F5F5"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="41dp"
        android:background="#E9FFFFFF"
        android:entries="@array/countries"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPreference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <TextView
        android:id="@+id/textViewPreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="100dp"
        android:text="Please Select Your Preference:"
        android:textColor="#E2FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <RadioGroup
        android:id="@+id/coffee_or_tea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8B000000"
        app:layout_constraintTop_toBottomOf="@id/textViewPreference"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/you_love_coffee"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/you_enjoy_tea"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="160dp"
        android:onClick="launchSecondActivity"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee_or_tea" />


</androidx.constraintlayout.widget.ConstraintLayout>