...
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="35dp"
        android:text="@string/your_name_is"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/nameDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameDisplay"
...
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDisplay" />

    <TextView
        android:id="@+id/emailDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:text="TextView"
...
