<resources>
    <string name="app_name">Sign Up Screen</string>
    <string name="sign_up">Sign Up</string>
    <string name="groups">Groups</string>
    <string name="your_name_is">Your Name is:</string>
    <string name="submit">Submit</string>
    <string name="you_love_coffee">You Love Coffee</string>
    <string name="you_enjoy_tea">You Enjoy Tea</string>
</resources>